# rss-digest-agent

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  investor_profile.toml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/adapters/data/: brapi_adapter.py
app/adapters/delivery/: telegram_adapter.py
app/adapters/narrators/: claude_haiku_narrator.py  silent_narrator.py  template_narrator.py
app/adapters/rules/: external_api_adapter.py  fii_rule_set.py
app/adapters/scoring/: weighted_score_engine.py
app/api/v1/: routes.py  schemas.py
app/core/: config.py  database.py
app/domain/: enums.py  models.py  models_asset.py  models_fii.py  ports.py
app/pipeline/: asset_pipeline.py
app/repositories/: article_repository.py  digest_repository.py  feed_repository.py  fii_repository.py
app/scheduler/: fii_runner.py  jobs.py
app/services/: ai_service.py  delivery_service.py  digest_service.py  rss_service.py
migrations/: env.py
migrations/versions/: b5c29e314434_create_initial_tables.py  c1a3f8e92b47_create_fii_tables.py
scripts/: smoke_fii.py
tests/: conftest.py
tests/integration/: test_brapi_integration.py  test_pipeline.py
tests/unit/: test_ai_service.py  test_asset_pipeline.py  test_brapi_adapter.py  test_config.py  test_delivery_service.py  test_digest_service.py  test_fii_repository.py  test_fii_rules.py  test_narrators.py  test_repositories.py  test_routes.py  test_rss_service.py  test_score_engine.py  test_smoke_message.py  test_telegram_adapter.py
(+1 files in other folders)
